Better auth flow and state management on URL.
Improved authentication flow and addition of new devices
========================================================

- The `NewHost` and `EditHost` components have been merged and all the
  fields have been extensively documented.

- The legacy authentication flow (with hostname, device name, HTTP port,
  Websocket port, token and SSL flag) has been replaced by a much
  simpler flow that only requires the URL of the instance.

- Error handling has also been properly implemented.

- The device name is now optional - if not provided then the connection
  test will perform a call to `config.get` and retrieve the reported
  `device_id`.

- The token is now optional as well. If not provided, the extension will
  leverage an existing authenticated session on the browser. If the user
  isn't logged in, the extension will automatically redirect to the
  authentication page.

State management on the URL
===========================

URLs within the extension options are now dynamically filled with the
navigation state. This makes it possible to directly point to a form to
add a device in the extension.

--- a/src/common.scss
+++ b/src/common.scss
@@ -38,6 +38,37 @@ form {
     }
   }
 
+  button,
+  [type='submit'] {
+    display: inline-block;
+    padding: 0.4em 1em;
+    border-radius: 1em;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    color: #000;
+    cursor: pointer;
+
+    &:hover {
+      background-color: rgba(40, 235, 70, 0.5);
+      border-color: rgba(40, 235, 70, 0.5);
+    }
+
+    &:active {
+      background-color: rgba(40, 235, 70, 0.7);
+      border-color: rgba(40, 235, 70, 0.7);
+    }
+
+    &:disabled {
+      background-color: rgba(200, 200, 200, 0.5);
+      border-color: rgba(200, 200, 200, 0.5);
+      color: rgba(100, 100, 100, 0.5);
+      cursor: not-allowed;
+    }
+  }
+
+  [type='submit'] {
+    background-color: rgba(40, 235, 70, 0.3);
+  }
+
   .buttons {
     margin-top: 0.5em;
     padding-top: 0.5em;
@@ -66,6 +97,40 @@ form {
 
   &.error {
     background: rgba(255, 200, 200, 0.3);
+  }
+}
+
+.help {
+  font-size: 0.9em;
+  color: #666;
+  margin-top: 0.5em;
+  margin-bottom: 1em;
+
+  a {
+    color: #888;
+    text-decoration: none;
+
+    &:hover {
+      color: #555;
+    }
+  }
+}
+
+.errors {
+  margin-top: 0.5em;
+  margin-bottom: 1em;
+
+  ul {
+    list-style-type: none;
+    padding: 0.5em;
+
+    li {
+      background: rgba(255, 200, 200, 0.3);
+      border: 1px solid rgba(255, 100, 100, 0.5);
+      border-radius: 1em;
+      margin-bottom: 0.5em;
+      padding: 0.5em;
+    }
   }
 }
 
